<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.057" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.147" />

    <ImageButton
        android:id="@+id/buttonBack3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintEnd_toStartOf="@+id/guideline52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline50"
        app:srcCompat="@drawable/flecha_pequena_izquierda"
        app:tint="#757575"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/user"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline54"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline53" />

    <EditText
        android:id="@+id/userMailText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/userInicioHint"
        app:layout_constraintBottom_toTopOf="@+id/guideline58"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline57"
        app:layout_constraintVertical_bias="0.523"
        tools:ignore="SpeakableTextPresentCheck"></EditText>

    <EditText
        android:id="@+id/passTextLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/passHint"
        app:layout_constraintBottom_toTopOf="@+id/guideline62"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline61"
        tools:ignore="SpeakableTextPresentCheck"></EditText>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/userAuxLogin"
        android:textColor="#8C9AA3"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline57"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.225" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.405" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/pass"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline60"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline59" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/passAux"
        android:textColor="#8C9AA3"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline61"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.51" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#F2EFFE"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/buttonContinue"
        android:textAllCaps="false"
        android:textColor="#5A80FA"
        android:textSize="18sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline64"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline63" />
</androidx.constraintlayout.widget.ConstraintLayout>