<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro2">

    <ImageButton
        android:id="@+id/buttonBack2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline39"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline40"
        app:srcCompat="@drawable/flecha_pequena_izquierda"
        app:tint="#757575"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/telf"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toStartOf="@+id/guideline43"
        app:layout_constraintStart_toStartOf="@+id/guideline44"
        app:layout_constraintTop_toTopOf="@+id/guideline42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <EditText
        android:id="@+id/telfText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/telfHint"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        app:layout_constraintEnd_toStartOf="@+id/guideline43"
        app:layout_constraintStart_toStartOf="@+id/guideline44"
        app:layout_constraintTop_toTopOf="@+id/guideline46"
        tools:ignore="SpeakableTextPresentCheck"></EditText>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/nunito_bold"
        android:shadowColor="#000000"
        android:text="@string/telfAux"
        android:textColor="#8C9AA3"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline46"
        app:layout_constraintEnd_toStartOf="@+id/guideline43"
        app:layout_constraintStart_toStartOf="@+id/guideline44"
        app:layout_constraintTop_toTopOf="@+id/guideline45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.295" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.057" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.147" />

    <Button
        android:id="@+id/buttonCompletar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#F2EFFE"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/buttonComplete"
        android:textAllCaps="false"
        android:textColor="#5A80FA"
        android:textSize="18sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline49"
        app:layout_constraintEnd_toStartOf="@+id/guideline43"
        app:layout_constraintStart_toStartOf="@+id/guideline44"
        app:layout_constraintTop_toTopOf="@+id/guideline48" />

</androidx.constraintlayout.widget.ConstraintLayout>